$Id: ChangeLog,v 1.16 2007-06-12 05:37:55 karl Exp $

2007-06-12 karl
    * Document the ::bsd::syslog command.

2007-03-12 karl
    * Update to Tcl Extension Architecture (TEA) 3.6.

2007-02-27 karl
    * Made getfsstat actually work.

    * Support the -wait and -nowait options to getfsstat, which is a Tcl
      interface to the BSD UNIX "getfsstat" system call.

    * Version bump to 1.0.

2007-02-18 karl
    * Add getfsstat that will return filesystem statistics for all mounted
      filesystems.

2007-01-17 karl
    * Add cputime proc to calculate the CPU time used by running something,
      like Tcl's time but uses the CPU time not elapsed real time.

2006-01-04 Karl Lehenbauer <karl-bsd@sc.com>
    * Now that we're loading in Tcl procs as well as a C extension
      library, make the generation of the pkgIndex.tcl file be
      correct, eh?

2006-01-04 Karl Lehenbauer <karl-bsd@sc.com>
    * Add support for syslog -- yes there are other Tcl syslog interfaces,
      at least Scotty/Tnm, but we don't want to pull all that stuff in,
      and this interface is, we believe, BSD-complete.

    * configure.in, generic/bsd.c: Detect whether the setproctitle call
      is available so we can build on the BSD variant Mac OS X/Darwin.

2005-11-28 Karl Lehenbauer <karl-bsd@sc.com>
    * Add support for ::bsd::getkey to read a single key from the keybaord
      in raw mode and return the character value as an integer

2005-11-23 Karl Lehenbauer <karl-bsd@sc.com>
    * Add support for MNT_JAILDEVFS and MNT_IGNORE flags when present.

2005-11-28 Karl Lehenbauer <karl-bsd@sc.com>
    * Add support for ::bsd::getkey to read a single key from the keybaord
      in raw mode and return the character value as an integer

2005-11-23 Karl Lehenbauer <karl-bsd@sc.com>
    * Add support for MNT_JAILDEVFS and MNT_IGNORE flags when present.

2005-08-07 Karl Lehenbauer <karl-bsd@sc.com>

    * Put all commands in a "bsd" namespace
    * Export commands from "bsd" namespace